# UltrasoundBoneLabeler

./: CMakeLists.txt  README.md
UltrasoundBoneLabeler/: CMakeLists.txt  UltrasoundBoneLabeler.py
UltrasoundBoneLabeler/Logic/: bone_probability_mapping.py  bone_surface_identification.py  files_manager.py
UltrasoundBoneLabeler/Resources/UI/: UltrasoundBoneLabeler.ui
